fix css z-index filter select

--- a/client/src/components/RangeFilter/styles/mobile.module.scss
+++ b/client/src/components/RangeFilter/styles/mobile.module.scss
@@ -17,6 +17,7 @@
     display: block;
     position: relative;
     padding-top: 16px;
+    z-index: 0;
   }
   .progressBar {
     background-color: $primary-green;
